anywhere/k8s/garage/garage-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/component: s3
    app.kubernetes.io/part-of: storage
spec:
  type: ClusterIP
  ports:
    - port: 3900
      targetPort: 3900
      protocol: TCP
      name: s3-api
    - port: 3902
      targetPort: 3902
      protocol: TCP
      name: s3-web
  selector:
    app.kubernetes.io/name: garage
    garage.cluster: primary
